# llm-regression

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: python-package-cd.yml  python-package-ci.yml
examples/: basic_demo.ipynb
src/llm_regression/: __init__.py  models.py  utils.py
tests/: test_models.py  test_utils.py
